<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cef1ebeb">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/splash">

    <RelativeLayout
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:src="@drawable/ic_clear_white_24dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>



        <TextView
            android:text="@string/create"
            android:textColor="#fff"
            android:layout_centerInParent="true"
            android:textSize="24sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/edit_bg"
            android:textColorHint="#4fc3f7"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_person_24dp"
            android:drawablePadding="20dp"
            android:paddingLeft="8dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_marginTop="20dp"
            android:hint="@string/username"
            />

        <RelativeLayout
            android:padding="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_below="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_next"
                android:text="@string/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:background="@color/splash"
                android:layout_alignParentRight="true"
                />


        </RelativeLayout>



    </RelativeLayout>

</LinearLayout>